<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bulldog Tipper</string>
    <string name="action_settings">Settings</string>
    <string name="tip_preference_default">15</string>
    <string name="tip_dialog_title">Edit preset tip</string>
    <string name="tip">Tip</string>
    <string name="bill">Bill</string>
    <string name="tip_pct">Tip %</string>
    <string name="totalMain">Total to Pay</string>
    <string name="totalEach">Total/Person</string>
    <string name="num_of_people">Number of people</string>
    <string name="per_person">Per person</string>
</resources>
